# STT

./: .gitignore  README.md  Research.txt  pyproject.toml  stt.toml
.github/scripts/: ensure_python_env.sh
.github/workflows/: ci.yml  transcribe.yml
docs/: manual.md
stt/: __init__.py  backend_factory.py  chunking.py  cli.py  concurrency.py  config.py  discovery.py  ffmpeg_tools.py  logging_utils.py  models.py  pipeline.py  summarize.py  utils.py
stt/transcribe/: __init__.py
stt/transcribe/backends/: __init__.py  base.py  faster_whisper_backend.py
tests/: test_chunking.py  test_concurrency.py  test_config.py  test_discovery.py  test_summary.py
