[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt"
version = "0.1.0"
description = "GitHub-native Speech To Text automation for committed MP3 inputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "STT maintainers" }
]
dependencies = []

[project.optional-dependencies]
runtime = [
  "faster-whisper>=1.1,<2",
  "pydub>=0.25.1,<1",
]
dev = [
  "ruff>=0.12,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stt*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
